fixes issue #23 (code full width on mobile)

--- a/source/scss/_article.scss
+++ b/source/scss/_article.scss
@@ -124,6 +124,12 @@ article {
       max-width: 100%;
     }
   }
+  pre {
+    @include respond-to(0, 700px) {
+      margin-left: -12.5%;
+      width: 125%;
+    }
+  }
   .caption {
     font-size: 0.75em;
     color: $light-gray;
